# BmC

./: .Rhistory  .env  .gitignore  .gitignore.swp  Dockerfile  README.md  Untitled.ipynb  Untitled1.ipynb  WorkingDoc.txt  bmc_conda.txt  classes_BmC.dot  dump.txt  environment.txt  environment.yml  gbif_sql.ipynb  generate_requirements.py  packages_BmC.dot  pyproject.toml  requirements.txt  requirements2.txt  setup.py
bmc_cube.egg-info/: PKG-INFO  SOURCES.txt
config/: chelsa_dev.yaml  chelsa_dev_2.yaml  chelsa_stress_test.yaml  config.yaml  dev_recipe.yaml  param.yaml  param_beInvasive.yaml  param_dev_cube.yaml  param_prototype.yaml  param_techDemo.yaml  param_template.yaml  prototype_param.yaml  test_config.yaml
config/level2/: eu_map.yaml  micro_lake.yaml
exploration/gbif/: GBIF.ipynb
exploration/openeo/: Untitled.ipynb
exploration/wekeo/: WEkEO.ipynb  how-to-get-data-using-harmonized-data-access.ipynb  welcome_to_wekeo_jupyterlab.ipynb
exploratory/GEE/: Data Manipulation GEE.ipynb  GEE - Land Visualization.ipynb  GEE Land cover.ipynb  Untitled.ipynb  Untitled1.ipynb  tutorial.ipynb
ideas/: spatiotemporal_ext.py
meta/: wekeo_data_inventory.csv
openeo-community-examples/: openEOproc.ipynb
scripts/: STAC.ipynb  Untitled.ipynb  externalSTAC.ipynb  testSTAC.json
tutorials/: 0_spatial_engine.ipynb  1_spatiotemporal_cube.ipynb  2_spatiotemporal_lake.ipynb  3_data_lake_generation.ipynb  4_cube_generation.ipynb  5_gbif.ipynb  german_clim_recipe.yaml  german_clim_recipe_v2.yaml  low_level.ipynb
visualization/: spatial_engine.py  spatiotemporal_cube.py
(+222 files in other folders)
